# vis3

./: .gitignore  LICENSE  README.md
covis_simple_alignment/: CMakeLists.txt
covis_simple_alignment/resources/: object.pcd
covis_simple_alignment/src/: computeFeatures.h  computeFeatures.hpp  simple_feature_combination.cpp
object_recognition/: CMakeLists.txt
object_recognition/include/: feature_cloud.h  object_recognition.h
object_recognition/resources/objects/: BakingVanilla_25k_tex.ply  OrangeMarmelade_25k_tex.mtl  PotatoeStarch_25k_tex.mtl  YellowSaltCube_25k_tex.mtl
object_recognition/resources/objects/grasps/: BakingVanilla_25k_tex.txt  OrangeMarmelade_25k_tex.txt  PotatoeStarch_25k_tex.txt
object_recognition/src/: choose_object.h  feature_cloud.cpp  feature_cloud.h  main.cpp  object.cpp  object.h  object_recognition.cpp  object_recognition.h  object_recognition_types.h
simple_object_detection/: CMakeLists.txt
simple_object_detection/resources/: scene.pcd
simple_object_detection/src/: main.cpp
